# tintin

./: .#tmp  BETAFIXES  BUGS  COPYING  CREDITS  FAQ  INSTALL  README  SCRIPTS  TODO  TODO~  chat  gripe
docs/: chat_protocol.txt  sgi  ssl.txt  tintin19.cr  tintin19.txt
mods/: .#igor.mods  .#igr.mods  .#scandum.mods  1.5.mods  dsc.mods  igor.mods  igr.mods  jul.mods  pkj.mods  rse.mods  sbutler.mods  scandum.mods  sverre.mods  svr.mods  xin.mods  ycjhi.mods
src/: .#tmp  .#x.scr  Makefile.bak  Makefile.in  action.c  advertise.c  alias.c  antisub.c  array.c  buffer.c  chat.c  class.c  cols  config.c  config.h  config.h.in  config.status  configure  configure.in  cursor.c  data.c  debug.c  echo.c  event.c  files.c  forkpty.c  function.c  gag.c  help.c  highlight.c  history.c  igr.mods  input.c  line.c  list.c  llist.c  log.c  macro.c  main.c  mapper.c  (+44 more)
